--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
+@font-face {
+  font-family: main;
+  src: ("./styles/montserrat/Montserrat-Regular.ttf");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 svg {
   padding: 0;
   margin: 0;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
