projects added to the project page

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @font-face {
   font-family: main;
-  src: ("./styles/montserrat/Montserrat-Regular.ttf");
+  src: url("./styles/montserrat/Montserrat-Regular.ttf");
+}
+@font-face {
+  font-family: main_bold;
+  src: url("./styles/montserrat/Montserrat-Bold.ttf");
+  font-weight: bold;
 }
 
 body {
