--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'main';
+  src: url("./styles/montserrat/montserrat-v15-latin-regular.woff") format('woff')
+}
+body {
+  font-family: 'main';
+}
+
 a {
   display: contents;
 }
